# CyberStrikeAI

./: .gitignore  config.yaml  go.mod
agent-runtime/: Cargo.toml  build.rs
agent-runtime/src/: cancellation.rs  compaction.rs  event_protocol.rs  filesystem_runtime.rs  grpc_protocol.rs  grpc_server.rs  knowledge_runtime.rs  main.rs  mcp_bridge.rs  mcp_registry.rs  model_stream.rs  permission.rs  plan_store.rs  runtime_state.rs  session_loop.rs  session_store.rs  skill_runtime.rs  submission_loop.rs  tool_registry.rs  tool_runtime.rs  turn_loop.rs
apps/chat-web/: components.json  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.test.json  vite.config.ts
docs/: agent-runtime-grpc-redis-migration-plan.md  api-migration-flow.md  chat-web-api-surface.md
internal/agent/: agent.go
internal/agentruntime/: client.go  client_test.go  grpc_client.go  grpc_client_test.go  proto_convert.go  proto_convert_test.go  redis_state_reader.go  redis_state_reader_test.go  runtime_client.go
internal/app/: app.go  mcp_handler_test.go
internal/config/: agent_runtime_test.go  config.go
internal/database/: agent_runtime.go  agent_runtime_test.go  conversation.go  conversation_title_test.go  database.go
internal/handler/: agent.go  agent_runtime.go  agent_runtime_event_bridge.go  agent_runtime_test.go  auth.go  batch_task_manager.go  batch_task_mcp.go  config.go  config_list_models_test.go  config_rustapi_proxy_test.go  conversation.go  conversation_rustapi_proxy_test.go  conversation_title.go  conversation_title_test.go  eino_single_agent.go  hitl.go  hitl_rustapi_proxy_test.go  multi_agent.go  openapi.go  (+11 more)
roles/: 目标预检调度.yaml  默认.yaml
rustapi/: Cargo.toml  README.md
rustapi/src/: main.rs
scripts/: deploy-systemd.sh
skills/: README.md
tools/: asset_mapping.yaml  db-readonly-query.yaml  execute-python-script.yaml  gau.yaml  http-framework-test.yaml  icp-query.yaml  katana.yaml  nmap.yaml  nucleiPlus.yaml  nucleiPlus_precheck.yaml  proxy-fetch.yaml  quake_search.yaml  rustscan.yaml  streaming-port-scan.yaml  whatweb.yaml  zoomeye_search.yaml
(+114 files in other folders)
