[package]
name = "cyberstrike-agent-runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "cyberstrike-agent-runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4"] }
