[package]
name = "cyberstrike-agent-runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[[bin]]
name = "cyberstrike-agent-runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures-core = "0.3"
prost = "0.13"
redis = "0.27"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
uuid = { version = "1.8", features = ["v4"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
