[package]
name = "cyberstrike-rustapi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "cyberstrike-rustapi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx-core = { version = "0.8", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "json"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["json"] }
tokio = { version = "1.44", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
uuid = { version = "1.11", features = ["v4"] }
